@@ -1,3 +1,9 @@
+2019-12-05  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/plotseries.R (.spread_labels): experimental
+	new internal function for shifting labels when
+	they overlap
+
 2019-11-05  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/plotseries.R (plotseries): add argument 'grid.col'
